dev/tests/cases/neg/47_bridge_void.tv
df main() -> void {
    set ch: bridge<void> = bridge_new(1);
    bridge_close(ch);
}
